# SmartParcelStation

./: .gitignore  README.md  提示词.md
clip-node-nrf52810/: .gitignore  CMakeLists.txt  README.md  prj.conf
clip-node-nrf52810/boards/nordic/clip_node_nrf52810/: Kconfig  Kconfig.clip_node_nrf52810  Kconfig.defconfig  board.cmake  board.yml  clip_node_nrf52810.dts  clip_node_nrf52810.yaml  clip_node_nrf52810_defconfig
clip-node-nrf52810/build-codex-verify/: build_info.yml  clip-node-nrf52810_sysbuild_cache.txt  domains.yaml  sysbuild_modules.txt  zephyr_settings.txt
clip-node-nrf52810/build-codex-verify/Kconfig/: Kconfig.modules  Kconfig.shield.defconfig
clip-node-nrf52810/build-codex-verify/Kconfig/boards/: Kconfig.clip_node_nrf52810
clip-node-nrf52810/build-codex-verify/_sysbuild/: autoconf.h
clip-node-nrf52810/build-codex-verify/clip-node-nrf52810/: build_info.yml  zephyr_modules.txt
clip-node-nrf52810/build-codex-verify/clip-node-nrf52810/Kconfig/: Kconfig.shield
clip-node-nrf52810/build-codex-verify/clip-node-nrf52810/zephyr/: .cmake.dotconfig.checksum  edt.pickle  edt.pickle.cmake.new  (+5 more)
clip-node-nrf52810/build-codex-verify/zephyr/: .cmake.dotconfig.checksum  snippets_generated.cmake
clip-node-nrf52810/docs/: ble_design.md  hardware_pins.md  power_strategy.md  protocol.md  test_plan_e73_2g4m04s1a.md  test_record_2026-06-16_buzzer_power_on.md
clip-node-nrf52810/src/: battery_monitor.c  battery_monitor.h  ble_clip_service.c  ble_clip_service.h  buzzer.c  buzzer.h  clip_protocol.c  clip_protocol.h  clip_state.c  clip_state.h  early_gpio_test.c  led_rgb.c  led_rgb.h  main.c  remove_sensor.c  remove_sensor.h
clip-node-nrf52810/sysbuild/: CMakeLists.txt
clip-node-nrf52810/tools/: jlink_flash.jlink
gate-access/main/: CMakeLists.txt  app_config.h  app_main.c  display_board_ctrl.c  display_board_ctrl.h  display_ui.c  display_ui.h  esp8266_at.c  esp8266_at.h  gateway_client.c  gateway_client.h  network_client.h  network_esp8266_at.c  pn532_diag.c  pn532_diag.h  pn532_reader.c  pn532_reader.h  touch_test.c  touch_test.h
(+364 files in other folders)
