idf_component_register(
    SRCS
        "app_main.c"
        "pn532_reader.c"
        "esp8266_at.c"
        "network_esp8266_at.c"
        "gateway_client.c"
        "display_ui.c"
    INCLUDE_DIRS "."
    REQUIRES
        driver
        esp_driver_gpio
        esp_driver_i2c
        esp_driver_uart
        esp_event
        esp_hw_support
        esp_lcd
        esp_timer
        nvs_flash
        espressif__cjson
)
